# gtest

./: .gitignore  README.md  sonar-project.properties
src/: CMakeLists.txt  conanfile.py  main.cpp  math.cpp  math.h
tests/: math_tests.cpp
